--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,11 +3,12 @@ const today = new Date();
 ---
 
 <footer>
-	&copy; {today.getFullYear()} YOUR NAME HERE. All rights reserved.
+  &copy; {today.getFullYear()} Ian Kim. All rights reserved.<br />
+  Built with <a href="https://github.com/withastro/astro/tree/main/examples/blog">the Astro starter kit</a>.
 </footer>
 <style>
-	footer {
-		padding: 25px;
-		text-align: center;
-	}
+  footer {
+    padding: 25px;
+    text-align: center;
+  }
 </style>
