--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,6 +3,7 @@ import HeaderLink from "./HeaderLink.astro";
 import { SITE_TITLE } from "../config";
 ---
 
+<a id="skip-link" href="#main-content">Skip to main content</a>
 <header>
   <h2>
     {SITE_TITLE}
@@ -15,6 +16,17 @@ import { SITE_TITLE } from "../config";
   </nav>
 </header>
 <style>
+  #skip-link {
+    left: 50%;
+    position: absolute;
+    transform: translateY(-200%);
+    transition: transform 0.3s;
+  }
+
+  #skip-link:focus {
+    transform: translateY(0);
+  }
+
   header {
     margin: 0em 0 2em;
   }
