--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -18,7 +18,7 @@ const {
 } = Astro.props as Props;
 ---
 
-<html>
+<html lang="en-us">
   <head>
     <BaseHead title={title} description={description} />
     <style>
