Don't use translateY for skip link
This causes it to appear briefly before being punted offscreen

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,12 +18,12 @@ import { SITE_TITLE } from "../config";
   #skip-link {
     left: 50%;
     position: absolute;
-    transform: translateY(-200%);
-    transition: transform 0.3s;
+    top: -5rem;
+    transition: top 0.3s;
   }
 
   #skip-link:focus {
-    transform: translateY(0);
+    top: 0;
   }
 
   header {
