--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -35,4 +35,4 @@ const { title, description, image = "/me.jpg" } = Astro.props;
 <meta property="twitter:url" content={Astro.url} />
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
-<meta property="twitter:image" content={new URL(image, Astro.url)} />
+<!-- <meta property="twitter:image" content={new URL(image, Astro.url)} /> -->
